--- a/task-uninstalling.adoc
+++ b/task-uninstalling.adoc
@@ -5,7 +5,7 @@ keywords: uninstall, uninstall data broker, remove data broker
 summary: If needed, run an uninstall script to remove the data broker and packages and directories that were created when the data broker was installed.
 ---
 
-= Uninstalling the data broker
+= Uninstall the data broker
 :hardbreaks:
 :nofooter:
 :icons: font
