--- a/task-external-vault.adoc
+++ b/task-external-vault.adoc
@@ -5,7 +5,7 @@ keywords: hashicorp, vault, credentials, secrets, API
 summary: When you create a sync relationship that requires Amazon S3, Azure, or Google Cloud credentials, you need to specify those credentials through the BlueXP copy and sync user interface or API. An alternative is to set up the data broker to access the credentials directly from an external HashiCorp Vault.
 ---
 
-= Setting up a data broker group to use an external HashiCorp Vault
+= Set up a data broker group to use an external HashiCorp Vault
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -32,7 +32,7 @@ Prepare the data broker group to fetch credentials from the external vault by mo
 [role="quick-margin-para"]
 Now that everything is set up, you can send an API call to create a sync relationship that uses your vault to get the secrets.
 
-== Preparing the vault
+== Prepare the vault
 
 You'll need to provide BlueXP copy and sync with the URL to the secrets in your vault. Prepare the vault by setting up those URLs. You need to set up URLs to the credentials for each source and target in the sync relationships that you plan to create.
 
@@ -62,7 +62,7 @@ Example for the full URL and path for target credentials::
 +
 The prefix path is _/my-path/all-secrets/_, the request ID is _n32hcbnejk2_, and the target endpoint is Azure.
 
-== Preparing the data broker group
+== Prepare the data broker group
 
 Prepare the data broker group to fetch credentials from the external vault by modifying the local config file for each data broker in the group.
 
@@ -156,7 +156,7 @@ Namespace::
   }
 }
 
-=== Setting up permissions when using gcp-iam authentication
+=== Set up permissions when using gcp-iam authentication
 
 If you're using the _gcp-iam_ authentication method, then the data broker must have the following GCP permission:
 
