--- a/task-nfs-encryption.adoc
+++ b/task-nfs-encryption.adoc
@@ -5,7 +5,7 @@ keywords: encryption, in flight, data in flight, in-flight, data-in-flight, nfs,
 summary: If your business has strict security policies, sync data between NFS servers in different networks using data-in-flight encryption.
 ---
 
-= Syncing NFS data using data-in-flight encryption
+= Sync NFS data using data-in-flight encryption
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -71,7 +71,7 @@ If you have not yet deployed a data broker, review the data broker requirements.
 ** link:task-installing-gcp.html[Review Google Cloud installation]
 ** link:task-installing-linux.html[Review Linux host installation]
 
-== Syncing NFS data using data-in-flight encryption
+== Sync NFS data using data-in-flight encryption
 
 Create a new sync relationship between two NFS servers or between Azure NetApp Files, enable the in-flight encryption option, and follow the prompts.
 
