--- a/whats-new.adoc
+++ b/whats-new.adoc
@@ -16,6 +16,10 @@ summary: Learn what's new in BlueXP copy and sync.
 Learn what's new in BlueXP copy and sync.
 
 // tag::whats-new[]
+== 11 August 2024
+ 
+We updated the BlueXP copy and sync service and the data broker to fix a few bugs. The new data broker version is 1.0.54.
+
 == 14 July 2024
 
 We updated the BlueXP copy and sync service and the data broker to fix a few bugs. The new data broker version is 1.0.53.
@@ -23,6 +27,8 @@ We updated the BlueXP copy and sync service and the data broker to fix a few bug
 == 2 June 2024
 
 The BlueXP copy and sync service was updated to fix a few bugs. The data broker was also updated to apply security updates. The new data broker version is 1.0.52.
+
+// end::whats-new[]
 
 == 8 April 2024
 
@@ -39,8 +45,6 @@ https://docs.netapp.com/us-en/bluexp-copy-sync/task-installing-linux.html#linux-
 Users now have the option to filter directories using regex.
 
 https://docs.netapp.com/us-en/bluexp-copy-sync/task-creating-relationships.html#create-other-types-of-sync-relationships[Learn more about the *Exclude Directories* feature.]
-
-// end::whats-new[]
 
 == 26 November 2023
 
