--- a/whats-new.adoc
+++ b/whats-new.adoc
@@ -14,6 +14,7 @@ summary: Learn what's new in BlueXP copy and sync.
 [.lead]
 Learn what's new in BlueXP copy and sync.
 
+// tag::whats-new[]
 == 16 September 2024
 include::_whatsnew/2024-09-16.adoc[]
 
@@ -22,6 +23,7 @@ include::_whatsnew/2024-08-11.adoc[]
 
 == 14 July 2024
 include::_whatsnew/2024-07-14.adoc[]
+// end::whats-new[]
 
 == 2 June 2024
 === Bug fixes
