--- a/whats-new.adoc
+++ b/whats-new.adoc
@@ -15,17 +15,21 @@ summary: Learn what's new in BlueXP copy and sync.
 Learn what's new in BlueXP copy and sync.
 
 // tag::whats-new[]
+== 27 October 2024
+include::_whatsnew/2024-10-27.adoc[]
+
 == 16 September 2024
 include::_whatsnew/2024-09-16.adoc[]
 
 == 11 August 2024
 include::_whatsnew/2024-08-11.adoc[]
+// end::whats-new[]
 
 == 14 July 2024
 include::_whatsnew/2024-07-14.adoc[]
-// end::whats-new[]
 
 == 2 June 2024
+
 === Bug fixes
 The BlueXP copy and sync service was updated to fix a few bugs. The data broker was also updated to apply security updates. The new data broker version is 1.0.52.
 
