--- a/task-licensing.adoc
+++ b/task-licensing.adoc
@@ -41,7 +41,7 @@ AWS enables you to pay-as-you-go or to pay annually.
 +
 The following video shows the process:
 +
-video::video_cloud_sync_registering.mp4[width=848, height=480]
+video::796ffd6d-cade-4750-8504-b24c010b225d[panopto, title="Subscribe to BlueXP copy and sync from the AWS Marketplace"]
 
 .Steps to pay annually
 
@@ -77,7 +77,7 @@ Select *Monthly* to pay by the hour, or *Yearly* to pay for a year up front.
 +
 The following video shows the process:
 +
-video::video_cloud_sync_registering_azure.mp4[width=848, height=480]
+video::a6a39447-b7b1-42f6-9c89-b24c010b21b9[panopto, title="Subscribe to BlueXP copy and sync from the Azure Marketplace"]
 
 == [[licenses]]Purchase licenses from NetApp and adding them to BlueXP copy and sync
 
