--- a/task-installing-linux.adoc
+++ b/task-installing-linux.adoc
@@ -22,9 +22,9 @@ When you create a new data broker group, choose the On-Prem Data Broker option t
 ** CentOS 8.0 and 8.5
 +
 CentOS Stream is not supported.
-** Red Hat Enterprise Linux 8.5, 8.8, and 8.9
+** Red Hat Enterprise Linux 8.5, 8.8, 8.9, and 9.4
 ** Rocky Linux 9
-** Ubuntu Server 20.04 LTS
+** Ubuntu Server 20.04 LTS, 23.04 LTS, and 24.04 LTS
 ** SUSE Linux Enterprise Server 15 SP1
 +
 The command `yum update` must be run on the host before you install the data broker.
