--- a/whats-new.adoc
+++ b/whats-new.adoc
@@ -15,15 +15,19 @@ summary: Learn what's new in BlueXP copy and sync.
 Learn what's new in BlueXP copy and sync.
 
 // tag::whats-new[]
+== 2 February 2025
+include::_whatsnew/2025-02-02.adoc[]
+
 == 27 October 2024
 include::_whatsnew/2024-10-27.adoc[]
 
 == 16 September 2024
 include::_whatsnew/2024-09-16.adoc[]
 
+// end::whats-new[]
+
 == 11 August 2024
 include::_whatsnew/2024-08-11.adoc[]
-// end::whats-new[]
 
 == 14 July 2024
 include::_whatsnew/2024-07-14.adoc[]
