update link for faq get help contact link

--- a/faq.adoc
+++ b/faq.adoc
@@ -160,7 +160,7 @@ link:task-managing-relationships.html#change-the-settings-for-a-sync-relationshi
 
 === What if I have a very large dataset?
 
-If a single directory contains 600,000 files or more, mailto:ng-cloudsync-support@netapp.com[contact us] so that we can help you configure the data broker group to handle the payload. We might need to add additional memory to the data broker group.
+If a single directory contains 600,000 files or more, link:task-get-help.html[contact us] so that we can help you configure the data broker group to handle the payload. We might need to add additional memory to the data broker group.
 
 Note that there's no limit to the total number of files in the mount point. The extra memory is required for large directories with 600,000 files or more, regardless of their level in the hierarchy (top directory or subdirectory).
 
